--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ Flask-JWT-Extended = "*"
 Flask-SQLAlchemy = "*"
 marshmallow-sqlalchemy = "*"
 flask-marshmallow = "*"
+requests = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
